--- a/app/src/main/res/layout/news_category_item.xml
+++ b/app/src/main/res/layout/news_category_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <Button
+        android:id="@+id/button_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/white"
-        android:textSize="18sp" />
-
+        android:layout_margin="4dp"
+        android:onClick="onCategoryButtonClick"
+        android:padding="8dp"
+        android:text=""
+        android:textAllCaps="true" />
 
 
 </FrameLayout>
