--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -67,7 +67,8 @@
                     android:layout_marginTop="4dp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:src="@drawable/favorite_border" />
+                    android:src="@drawable/favorite_border"
+                    android:background="@color/black"/>
 
             </LinearLayout>
 
