--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/profile"
+        android:id="@+id/news"
         android:icon="@drawable/ic_newspaper"
         android:title="News" />
 
     <item
-        android:id="@+id/maps"
+        android:id="@+id/favorites"
         android:icon="@drawable/favorite_border"
         android:title="Favorite News" />
 
