delete functionality and icon changes

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -67,8 +67,7 @@
                     android:layout_marginTop="4dp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:src="@drawable/favorite_border"
-                    android:background="@color/black"/>
+                    android:src="@drawable/favorite_border" />
 
             </LinearLayout>
 
