--- a/app/src/main/res/layout/news_category_item.xml
+++ b/app/src/main/res/layout/news_category_item.xml
@@ -10,6 +10,8 @@
         android:layout_margin="4dp"
         android:onClick="onCategoryButtonClick"
         android:padding="8dp"
+        android:textColor="@color/white"
+        android:backgroundTint="#d86371"
         android:text=""
         android:textAllCaps="true" />
 
