fragment folder and sql notnull bugfix

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.NewsFragment">
+    tools:context=".presentation.fragment.NewsFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
