--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.FavoriteFragment">
+    tools:context=".presentation.fragment.FavoriteFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
