--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_search"
+                android:layout_gravity="end"
+                android:layout_marginEnd="25dp"
                 app:iconifiedByDefault="false"
                 app:queryHint="Search..." />
 
